--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-    <h1>Heelo World</h1>
-    <p>My Change in feature branch</p>
+    <h1>Hello GIT TEST</h1>
+    <p></p>
 </body>
 </html>
